# ean_est_pytho_DQ_2024

./: Daniel17092024git.txt  Relación entre minutos usados e ingreso de clientes - Introducción a Pandas.ipynb  pyproject.toml
